Fixed footer overlap

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -89,6 +89,7 @@ header {
   justify-content: center;
   align-items: center;
   padding: 10px;
+  margin-bottom: 100px;
   flex-wrap: wrap;
 }
 
